// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Select snapshots > matches snapshot: Default 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="listbox"
    class="flex h-9 items-center justify-between gap-2 rounded-md border border-input bg-background px-3 py-2 text-sm shadow-sm outline-none transition-colors data-[placeholder]:text-muted-foreground focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[popup-open]:ring-2 data-[popup-open]:ring-ring aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive aria-invalid:focus-visible:ring-destructive w-52"
    id="base-ui-_r_0_"
    role="combobox"
    tabindex="0"
    type="button"
  >
    <span>
      apple
    </span>
    <span
      aria-hidden="true"
      class="flex shrink-0 items-center text-muted-foreground"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-down size-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6 9 6 6 6-6"
        />
      </svg>
    </span>
  </button>
  <input
    aria-hidden="true"
    id="base-ui-_r_0_-hidden-input"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="-1"
    value="apple"
  />
</div>
`;

exports[`Select snapshots > matches snapshot: ErrorState 1`] = `
<div>
  <button
    aria-describedby="fruit-error"
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-invalid="true"
    class="flex h-9 items-center justify-between gap-2 rounded-md border border-input bg-background px-3 py-2 text-sm shadow-sm outline-none transition-colors data-[placeholder]:text-muted-foreground focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[popup-open]:ring-2 data-[popup-open]:ring-ring aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive aria-invalid:focus-visible:ring-destructive w-52"
    data-placeholder=""
    id="base-ui-_r_3_"
    role="combobox"
    tabindex="0"
    type="button"
  >
    <span
      data-placeholder=""
    >
      Select a fruit
    </span>
    <span
      aria-hidden="true"
      class="flex shrink-0 items-center text-muted-foreground"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-down size-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6 9 6 6 6-6"
        />
      </svg>
    </span>
  </button>
  <p
    class="select-error"
    id="fruit-error"
    role="alert"
  >
    Please select a fruit.
  </p>
  <input
    aria-hidden="true"
    id="base-ui-_r_3_-hidden-input"
    style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
    tabindex="-1"
    value=""
  />
</div>
`;
